<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_vibrator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.zipext.vibrator.Vibrator"
    tools:showIn="@layout/activity_vibrator">

    <LinearLayout
        android:id="@+id/linear_intensity"
        android:layout_above="@+id/ad_banner"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_intensity"
            android:text="@string/text_intensity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <SeekBar
            android:layout_marginTop="7dp"
            android:progress="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seek_intensity" />

        <TextView
            android:id="@+id/text_interval"
            android:layout_marginTop="7dp"
            android:text="@string/text_pause"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <SeekBar
            android:id="@+id/seek_interval"
            android:progress="100"
            android:layout_marginTop="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/ad_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="@string/banner_size"
        ads:adUnitId="@string/banner_uid"
        android:layout_alignParentBottom="true"
        />

    <LinearLayout
        android:id="@+id/linear_gif"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        >


        <pl.droidsonroids.gif.GifImageButton
            android:id="@+id/gif_vibrate"
            android:background="@drawable/paused"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
    </LinearLayout>
</RelativeLayout>
